hphp/test/zend/bad/ext/reflection/tests/ReflectionExtension_getClasses_basic.php
<?php
$ext = new ReflectionExtension('reflection');
var_dump($ext->getClasses());
?>
==DONE==
